# Modulite_backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  modulite-ec2.pem  start_database.sh
.github/workflows/: deploy.yml  rust_cheack.yml
src/: lib.rs  main.rs  repository.rs
src/auth/: mod.rs
src/databases/postgres_connection/: mod.rs  start_postgres.sh
src/repository/: mod.rs
src/users/: mod.rs
tests/: health_check.rs
