[package]
name = "Modulite"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
paperclip = { version = "0.8", features = ["actix4"] }
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
sqlx = {version = "0.8.0", features = ["postgres", "runtime-async-std"]}
dotenv = "0.15.0"
bcrypt = "0.15.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
