[package]
name = "Modulite"
version = "0.1.0"
edition = "2021"
authors = ["André Wozniack <andre_fabriciow@hotmail.com>"]

[lib]
path = "src/lib.rs"
name = "Modulite"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
sqlx = {version = "0.8.0", features = ["postgres", "runtime-async-std"]}
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }


[dev-dependencies]
reqwest = "0.11"