[package]
name = "modulite"
version = "0.1.0"
edition = "2021"
authors = ["André Wozniack <andre_fabriciow@hotmail.com>"]

[lib]
path = "src/lib.rs"
name = "modulite"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
bcrypt = "0.15.1"
openssl = "0.10.66"
openssl-sys = "0.9.103"


[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }

